# kreuzberg

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  .tflint.hcl  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPRECATION_GUIDE.md  DEPRECATION_IMPLEMENTATION_SUMMARY.md  FFI_ERROR_CONTEXT_SUMMARY.md  README.md  SECURITY_AUDIT.md  SECURITY_FIX_IMPLEMENTATION.md  SECURITY_INDEX.md  SECURITY_SUMMARY.md  SERIALIZATION_TEST_IMPLEMENTATION.md  TDD_GAP_ANALYSIS.md  TESTS_CREATED_CHECKLIST.md  Taskfile.yaml  Taskfile.yml  ai-rulez.yaml  biome.json  claude.json  composer.json  mkdocs.yaml  package.json  php-kreuzberg.ini  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml
.ai/: ai-rulez.yaml
.cargo/: config.toml
.github/: actionlint.yaml  dependabot.yaml
crates/docx-lite/: Cargo.toml  LICENSE-MIT
crates/docx-lite/src/: error.rs  extractor.rs  lib.rs  parser.rs  types.rs
docker/: Dockerfile.cli  Dockerfile.core  Dockerfile.full
docs/: API-CONSISTENCY.md  contributing.md  features.md  index.md
e2e/: README.md  VERIFICATION_CHECKLIST.md
examples/: kreuzberg.json  kreuzberg.toml  tsconfig.base.json
infrastructure/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
kreuzberg/: __init__.py  _constants.py  _document_classification.py  _gmft.py  (+8 more)
tools/e2e-generator/: Cargo.toml
tools/e2e-generator/e2e/go/: go.mod
tools/e2e-generator/e2e/java/: pom.xml
tools/e2e-generator/src/: csharp.rs  fixtures.rs  java.rs  main.rs  python.rs  ruby.rs  rust.rs  typescript.rs  wasm_deno.rs  wasm_workers.rs
(+2108 files in other folders)
