[package]
name = "docx-lite"
version = "0.2.0"
edition = "2021"
authors = ["V-Lawyer Team"]
license = "MIT OR Apache-2.0"
description = "Lightweight, fast DOCX text extraction library with minimal dependencies (vendored fork)"
repository = "https://github.com/v-lawyer/docx-lite"
publish = false

[dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
thiserror = "1.0"
