[package]
name = "kreuzberg-e2e-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
camino = "1.2"
clap = { workspace = true }
itertools = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
